# blademail

./: .prettierrc  README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: build.yml
.github/workflows/: build.yml
src/: App.tsx  App.vue  DisplayEmail.tsx  MailItem.tsx  Mailbox.tsx  SmtpServer.tsx  app.html  main.ts  route.ts  store.tsx  themes.ts  types.ts
src-react/: smtp.ts  store.tsx
src-react/components/: EmailBodyTabs.tsx  LicenseStatus.tsx  LinkCheckerRow.tsx  Mailbox.tsx  SpamAssassin.tsx  StatusBar.tsx
src-react/components/icons/: Cog.tsx  Firefox.tsx  GoogleChrome.tsx  Key.tsx  Loading.tsx  XIcon.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BrokenLinksChecker.tsx  CurrentEmail.tsx  EmailBodyTabs.tsx  HtmlPreview.tsx  Instruction.tsx  LicenseStatus.tsx  LinkCheckerRow.tsx  MailItem.tsx  MailItem.vue  Mailbox.tsx  Mailbox.vue  SmtpServer.tsx  SmtpServer.vue  SpamAssassin.tsx  StatusBar.tsx  StatusBar.vue
src/components/buttons/: ButtonAutoOpenNewEmail.tsx  ButtonDeleteEmails.tsx
src/components/email/: BodyTabs.vue  Header.vue  HtmlPreview.vue  LinkCheckerRow.vue  LinksChecker.vue  SpamAssassin.vue
src/components/icons/: CheckIcon.tsx  Firefox.vue  GoogleChrome.vue  Key.vue
src/components/mailbox/: ButtonDeleteAllEmails.vue
src/components/status-bar/: LicenseStatus.vue
src/lib/: mock.ts  quotes.ts  smtp.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
src/stores/: appStore.ts  license.ts  linksChecker.ts
src/utils/: quote-machines.tsx  utils.ts
src/views/: Email.vue  Home.vue
