[package]
name = "app"
version = "0.1.0"
description = "Local debugging email app"
authors = [ "bangnokia" ]
license = "MIT"
repository = "https://github.com/bangnokia/blademail"
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.15", features = ["fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "http-all", "path-all", "shell-open", "updater"] }
mailin-embedded = { version = "0.6.1", features = [ "rtls" ] }
email-parser = { version = "0.5.0", features = [ "headers", "mime", "content-disposition" ] }
once_cell = "1.9.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
