[package]
name = "app"
version = "0.1.0"
description = "Local debugging email app"
authors = [ "bangnokia" ]
license = "MIT"
repository = "https://github.com/bangnokia/blademail"
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "2", features = [] }
mailin-embedded = { version = "0.6.1", features = [ "rtls" ] }
email-parser = { version = "0.5.0", features = [ "headers", "mime", "content-disposition" ] }
once_cell = "1.9.0"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
